--- a/todo-app/index.html
+++ b/todo-app/index.html
@@ -30,8 +30,12 @@
       </pre>
 
       <div class="form-group">
-        <input v-model="newTodo" class="form-control" placeholder="Add todo..." v-on:keyup.enter="addTodo">
-        <button class="btn btn-primary" @click="addTodo">Add Todo</button>
+        <input  v-model="newTodo"
+                v-on:keyup.enter="addTodo"
+                class="form-control"
+                placeholder="Add todo...">
+
+        <button @click="addTodo" class="btn btn-primary">Add Todo</button>
       </div> <!--/.form-group-->
 
       <h2>Todos:</h2>
@@ -41,7 +45,7 @@
         <!-- <th>Complete:</th> -->
         <!-- <th>Delete:</th> -->
         <tr v-for="todo in todoList">
-          <td class="todo-task">{{ todo.task }}</td>
+          <td v-bind:class="{ 'completed' : todo.completed }">{{ todo.task }}</td>
           <td v-if="todo.completed == true">
             <button class="btn btn-success" @click="completeTodo($index)">
               <i class="fa fa-check" aria-hidden="true"></i>
