--- a/todo-app/index.html
+++ b/todo-app/index.html
@@ -51,7 +51,7 @@
         <ul class="list-group">
           <li
             v-bind:class="{ 'completed' : todo.completed }"
-            v-for="todo in todoList"
+            v-for="todo in todoList | orderBy 'completed' "
             class="list-group-item clearfix">
 
             {{ todo.task }}
@@ -66,7 +66,7 @@
             <!-- Completed Button -->
             <button
               v-if="todo.completed"
-              @click="completeTodo($index)"
+              @click="completeTodo(todo)"
               class="btn btn-success pull-right">
               <i class="fa fa-check" aria-hidden="true"></i>
             </button>
@@ -74,7 +74,7 @@
             <!-- Not Completed Button -->
             <button
               v-else
-              @click="completeTodo($index)"
+              @click="completeTodo(todo)"
               class="btn btn-warning pull-right">
               <i class="fa fa-circle-o" aria-hidden="true"></i>
             </button>
