finished todo-app

--- a/todo-app/index.html
+++ b/todo-app/index.html
@@ -47,7 +47,7 @@
         </div> <!--/.form-group-->
 
         <!-- List of Todo's -->
-        <h2>Todos: {{ todoTotal }}</h2>
+        <h2>Todos:</h2>
         <ul class="list-group">
           <li
             v-bind:class="{ 'completed' : todo.completed }"
