removed v-for from weather app and fixed json interpolation

--- a/weather-app/index.html
+++ b/weather-app/index.html
@@ -31,9 +31,9 @@
           {{ $data | json }}
         </pre>
 
-        <ul v-for="weather in weatherData.main">
+        <ul>
           <li>
-            {{ $index }} : {{ $key }} : {{ weather }}
+            {{ weatherData.main.temp }}
           </li>
         </ul>
 
