--- a/weather-app/index.html
+++ b/weather-app/index.html
@@ -28,19 +28,57 @@
       <!--everything gets wrapped in a single div or element to prevent 'fragmented template' warning-->
       <div class="wrapper">
 
+          <div class="form-group">
+            <label for="">City</label>
+            <input
+              v-model="city"
+              v-on:keyup.enter="getWeather"
+              type="text"
+              class="form-control"
+              placeholder="Enter a city...">
+          </div>
+
+          <div class="form-group">
+            <label for="">State</label>
+            <input
+              v-model="state"
+              v-on:keyup.enter="getWeather"
+              type="text"
+              class="form-control"
+              placeholder="Enter a state...">
+          </div>
+
+          <!-- Gets the Current Weather -->
+          <button
+            @click="getWeather"
+            type="submit"
+            class="btn btn-success">
+            Current Weather
+          </button>
+
+          <!-- Gets the 5 day Weather Forecast -->
+          <button
+            @click="getForecast"
+            type="submit"
+            class="btn btn-danger">
+            5 Day Forecast
+          </button>
+          <br />
+          <br />
+
         <!-- Current Weather
         ====================-->
         <h1 class="text-center">Current Weather</h1>
         <hr>
         <div class="row">
-          <div class="col-sm-6 col-md-4">
+          <div class="col-sm-6 col-md-4 col-md-offset-4">
             <div class="thumbnail">
               <!-- Use :src syntax to remove the 404 errors, don't use {{ }} -->
-              <img :src=" 'http://openweathermap.org/img/w/' + weatherData.weather[0].icon + '.png' ">
-              <div class="text-center">{{ weatherData.weather[0].description }}</div>
+              <img :src=" 'http://openweathermap.org/img/w/' + currentWeather.weather[0].icon + '.png' ">
+              <div class="text-center">{{ currentWeather.weather[0].description }}</div>
               <div class="text-center">
                 <h3>{{ weatherLocation.city }}, {{ weatherLocation.state }}</h3>
-                <h5>Temperature: {{ weatherData.main.temp }}&deg; F</h5>
+                <h5>Temperature: {{ currentWeather.main.temp }}&deg; F</h5>
               </div>
             </div>
           </div>
@@ -48,12 +86,13 @@
 
         <!-- Forecast
         ==================-->
-        <h1 class="text-center">5 day forecast every 3 hours</h1>
-        <hr>
+          <h1 class="text-center">5 day forecast every 3 hours</h1>
+          <hr>
+
           <div class="block-grid-xs-2 block-grid-sm-3 block-grid-md-3">
             <div v-for="item in weatherForecast.list">
               <div class="thumbnail">
-                <img :src=" 'http://openweathermap.org/img/w/' + weatherData.weather[0].icon + '.png' ">
+                <img :src=" 'http://openweathermap.org/img/w/' + item.weather[0].icon + '.png' ">
                 <div class="text-center">{{ item.weather[0].description }}</div>
                 <div class="text-center">
                   <h3>{{ weatherLocation.city }}, {{ weatherLocation.state }}</h3>
@@ -65,41 +104,7 @@
           </div>
 
 
-        <div class="form-group">
-          <label for="">City</label>
-          <input
-            v-model="city"
-            v-on:keyup.enter="getWeather"
-            type="text"
-            class="form-control"
-            placeholder="Enter a city...">
-        </div>
 
-        <div class="form-group">
-          <label for="">State</label>
-          <input
-            v-model="state"
-            v-on:keyup.enter="getWeather"
-            type="text"
-            class="form-control"
-            placeholder="Enter a state...">
-        </div>
-
-        <button
-          @click="getWeather"
-          type="submit"
-          class="btn btn-primary">
-          Submit
-        </button>
-
-        <button
-          @click="getForecast"
-          type="submit"
-          class="btn btn-danger">
-          Forecast
-        </button>
-        <br />
-        <br />
 
 
         <!-- <pre>
@@ -116,9 +121,9 @@
     <!-- Vue Resource -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue-resource/0.9.3/vue-resource.min.js"></script>
     <!-- jQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> -->
     <!-- Bootstrap JS -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script> -->
     <!-- Our JS -->
     <script src="src/js/app.js"></script>
   </body>
