--- a/todo-app/_Start/index.html
+++ b/todo-app/_Start/index.html
@@ -14,13 +14,11 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-sm-12 col-md-12 col-lg-12">
+        <div class="col-sm-12 col-md-12 col-lg-8 col-lg-offset-2">
           <h1>VueJS Todo-App</h1>
         </div> <!-- /.col -->
       </div> <!-- /.row -->
     </div> <!-- /.container-fluid -->
-
-
 
 
     <!-- Vue JS -->
