--- a/todo-app/Final/index.html
+++ b/todo-app/Final/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>VueJS Todo App</title>
     <!-- Font Awesome -->
-    <script src="https://use.fontawesome.com/331b2609e2.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <!-- Our CSS -->
