--- a/cryptotrade/index.html
+++ b/cryptotrade/index.html
@@ -5,6 +5,7 @@
     <title>cryptotrade</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
   </head>
   <body>
     <div id="app"></div>
