--- a/vue-cart/index.html
+++ b/vue-cart/index.html
@@ -22,6 +22,10 @@
     <!--dropdown-->
     <script src="/static/js/jquery.easydropdown.js"></script>
     <script src='/static/js/responsiveslides.min.js'></script>
+    <!-- FlexSlider -->
+    <script src='/static/js/imagezoom.js'></script>
+    <script defer src='/static/js/jquery.flexslider.js'></script>
+    <link rel='stylesheet' href='/static/css/flexslider.css' type='text/css' media='screen' />
   </head>
   <body>
     <div id="app"></div>
